# replicate

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
replicate/: __main__.py  config.py  memlog.py  replicator.py  rtcwake.py  run.py  sendmail.py  version.py
